--- a/Game_IS/Game_IS.vcxproj
+++ b/Game_IS/Game_IS.vcxproj
@@ -132,6 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MyGame.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\glad\glad.vcxproj">
@@ -146,6 +147,9 @@
     <ProjectReference Include="..\stbi\stbi.vcxproj">
       <Project>{9a454d29-2b15-4fb3-b124-a8bd8cbd9970}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyGame.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
