organized code in MyGame class

--- a/Game_IS/CMakeLists.txt
+++ b/Game_IS/CMakeLists.txt
@@ -1,8 +1,10 @@
 set(HEADER_FILES
+	MyGame.h
 )
 
 set(SOURCE_FILES
 	main.cpp
+	MyGame.cpp
 )
 
 add_executable(Game_IS ${HEADER_FILES} ${SOURCE_FILES})
